# PunditPDF

./: .env.example  .gitignore  README.md  api_endpoints.md  folder_structure.md  pyproject.toml  requirements.txt  start_chroma.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  exceptions.py
app/middlewares/: cors.py  logging.py  rate_limit.py
app/models/: chat.py  chunk.py  citation.py  pdf.py  quiz.py  user.py
app/repos/chat/: citation_repo.py  message_repo.py  session_repo.py
app/repos/document/: chunk_repo.py  document_repo.py  vector_repo.py
app/repos/quiz/: quiz_answer_repo.py  quiz_question_repo.py  quiz_session_repo.py
app/routers/: health.py
app/routers/chat/: routes.py
app/routers/document/: routes.py
app/routers/quiz/: routes.py
app/schemas/: common.py
app/schemas/chat/: request.py  response.py
app/schemas/document/: request.py  response.py
app/schemas/quiz/: request.py  response.py
app/services/: embedding_service.py  llm_service.py
app/services/document/: document_service.py  indexing_service.py  ingestion_service.py
app/services/prompts/: evaluation_prompts.py  quiz_prompts.py  rag_prompts.py
app/services/quiz/: evaluation_service.py  generator_service.py  grading_service.py  quiz_service.py  recommendation_service.py  session_service.py
app/services/rag/: citation_service.py  intent_service.py  rag_service.py  retriever.py
app/utils/: constants.py
chroma_db/: chroma.sqlite3
