[project]
name = "documind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.133.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
